--- a/frontend/travel-story-app/src/index.css
+++ b/frontend/travel-story-app/src/index.css
@@ -4,6 +4,14 @@
 @tailwind components;
 @tailwind utilities;
 
+.rdp-root {
+
+  --rdp-accent-color: #01B0CB; /* Change accent color to indigo. */
+  --rdp-accent-background-color: #dffbff;/* Change accent bg-color to indigo. */
+  --rdp-day_button-border-radius: 8px;
+  --rdp-selected-font: bold medium var(--rdp-font-family);
+}
+
 @layer base{
   html{
     font-family: "Poppins", "sans-serif";
@@ -13,6 +21,21 @@
     background-color: white;
     overflow-x: hidden;
   }
+}
+
+/* Custom scrollbar styles */
+.scrollbar::-webkit-scrollbar {
+  width: 3px;
+  height: 3px;
+}
+
+.scrollbar::-webkit-scrollbar-thumb {
+  background-color: #057c8e;
+  border-radius: 3px;
+}
+
+.scrollbar::-webkit-scrollbar-track{
+  background-color: rgb(172, 212, 229);
 }
 
 @layer components{
@@ -29,7 +52,23 @@
     @apply w-80 h-[450px] rounded-full bg-primary absolute rotate-45;
   }
 
+  .model-box{
+    @apply w-[80vw] md:w-[40%] h-[80vh]  bg-white rounded-lg mx-auto mt-14 p-5 overflow-y-scroll scrollbar z-50;
+  }
+
   .icon-btn{
     @apply text-[22px] text-slate-300 cursor-pointer hover:text-red-500;
+  }
+
+  .input-label{
+    @apply text-xs text-slate-400;
+  }
+
+  .btn-small{
+    @apply flex items-center gap-1 text-xs font-medium bg-cyan-50 text-primary shadow-cyan-100/0 border border-cyan-100 hover:bg-primary hover:text-white rounded px-3 py-[3px];
+  }
+
+  .btn-delete{
+    @apply bg-rose-50 text-rose-500 shadow-rose-100/0 border border-rose-100 hover:bg-rose-500 hover:text-white;
   }
 }
